# RoboSense_Helios--PCL_Recognition

./: CMakeLists.txt  README.md
include/: point_cloud_visualizer.hpp  rs_driver_wrapper.hpp  solar_panel_detector.hpp
src/: main.cpp  point_cloud_visualizer.cpp  rs_driver_wrapper.cpp  solar_panel_detector.cpp
